=================
=  CHANGE LOG   =
=================

J2SSH Maverick 1.5.0 - Aug 28, 2014

Features
    o New open source branch converted to maven.
    o Converted source to 1.5 source compatibility. 
    o Renamed all base packages to com.sshtools.
    o Re-factored logging interface, removed used of event service and replaced with custom interface.
    
Bug Fixes
	o Automatically attempt to add BouncyCastle JCE provider if found in class path. If not installed, there may no large prime support for some Diffie Hellman algorithms.
	o Evaluated and removed all java warnings through either re-factor or suppression.
	
=================
=  HISTORY      =
=================

J2SSH Maverick 1.4.53 - Aug 19, 2014

Bug Fixes
    o HTTP / SOCKS proxy classes missing connection timeout support.
    o Added synchronization to license validation to prevent possible corruption of license information under load.
    o Ssh2Channel sendRequest incorrectly synchronizes on connection instance rather than channel instance.
    
------------------
    
J2SSH Maverick 1.4.52 - Jun 11, 2014

Bug Fixes
    o Server disconnects and does not accept client connection when client identification string is sent optimistically.  
    o Last CR in file is not replaced in SftpClient text mode transfers.
    o jakarta-oro jar file missing from dependencies.
    
------------------

J2SSH Maverick 1.4.51 - Mar 31, 2014

Features
    o Added acceptLocalForwarding method to ForwardingClientListener.

Bug Fixes
    o Potential memory leak fixed when using pooled SftpClients with non-pooled SftpClient instances.
    o Subsequent call to ForwardingClient.stopLocalForwarding with a key that had previously been used to stop listening but not kill active tunnels should kill any remaining tunnels if the killActiveTunnels flag is true.
    o Changed default cipher to aes128-ctr.
    o Added back processStandardData protected method of byte[],int,int to prevent backwards compatibility issues.